[package]
name = "kubemgr"
version = "0.3.0"
edition = "2021"
authors = ["Dorian Grasset"]
keywords = ["kubernetes", "configuration", "merger"]
description = "The fastest way to merge Kubernetes configuration files 🏎."
license = "MIT OR Apache-2.0"
repository = "https://github.com/dorian-grst/kubemgr"

[[bin]]
name = "kubemgr"
path = "src/main.rs"
required-features = ["cli"]

[lib]
name = "kubemgrwasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4", features = ["derive"], optional = true }
kube = { version = "0.87.1", default-features = false, features = ["config"] }
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = { version = "6.0.0", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["cli"]
cli = ["clap", "dirs"]
wasm = ["wasm-bindgen", "console_error_panic_hook"]

# See kubemgr/home-override/README.md
[patch.crates-io]
home = { path = "./home-override" }